5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1793_3124.log
== TEST (2019-05-30 18:19:53) 
-- CODE:
from numpy import*
n=array(eval(input("digite n numeros: ")))
m=(n[0]*n[1]*n[2]*n[3]*n[4]*n[n-1])**1/n
media=m,dtype=float
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:28:03) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
m=(v[0]*v[1]*v[2]*v[3]*v[4]*v[n-1])**1/n
media=m,dtype=float
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:28:55) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
m=((v[0]*v[1]*v[2]*v[3]*v[4]*v[n-1])**1/n)
media=m,dtype=float
print(round(media,2))
-- EXECUTION TIME:
0.432814
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 3, in <module>
    m=((v[0]*v[1]*v[2]*v[3]*v[4]*v[n-1])**1/n)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:28:58) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
m=((v[0]*v[1]*v[2]*v[3]*v[4]*v[n-1])**1/n)
media=m,dtype=float
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:29:36) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
m=((v[0]*v[1]*v[2]*v[3]*v[n-1])**1/n)
media=m,dtype=float
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:33:42) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
m=((v[0]*v[1]*v[2]*v[3]*v[v-1])**1/v)
media=m,dtype=float
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:34:04) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
m=((v[0]*v[1]*v[2]*v[3]*v[v-1])**1/v)
media=m,dtype=float
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:34:39) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
m=(v[0]*v[1]*v[2]*v[3]*v[v-1])**1/v
media=m,dtype=float
print(round(media,2))
-- EXECUTION TIME:
0.484669
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 3, in <module>
    m=(v[0]*v[1]*v[2]*v[3]*v[v-1])**1/v
IndexError: arrays used as indices must be of integer (or boolean) type

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:34:41) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
m=(v[0]*v[1]*v[2]*v[3]*v[v-1])**1/v
media=m,dtype=float
print(round(media,2))
-- EXECUTION TIME:
0.471678
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 3, in <module>
    m=(v[0]*v[1]*v[2]*v[3]*v[v-1])**1/v
IndexError: arrays used as indices must be of integer (or boolean) type

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:38:52) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
m=(v[0]*v[1]*v[2]*v[3]*v[n-1])**1/v
media=m,dtype=float
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:39:46) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v, dtype=float)
m=(v[0]*v[1]*v[2]*v[3]*v[n-1])**1/v
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:40:07) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
m=(v[0]*v[1]*v[2]*v[3]*v[n-1])**1/v
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:40:35) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
m=(v[0]*v[1]*v[2]*v[3]*v[n-1])**1/v
print(round(m,2))
-- EXECUTION TIME:
0.359454
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 5, in <module>
    print(round(m,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:40:36) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
m=(v[0]*v[1]*v[2]*v[3]*v[n-1])**1/v
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:42:59) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
v=v,dtype=float
n=size(v)
m=(v[0]*v[1]*v[2]*v[3]*v[n-1])**1/v
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:43:25) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
v=(v,dtype=float)
n=size(v)
m=(v[0]*v[1]*v[2]*v[3]*v[n-1])**1/v
print(round(m,2))
-- EXECUTION TIME:
0.155629
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 3
    v=(v,dtype=float)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:43:26) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
v=(v,dtype=float)
n=size(v)
m=(v[0]*v[1]*v[2]*v[3]*v[n-1])**1/v
print(round(m,2))
-- EXECUTION TIME:
0.135083
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 3
    v=(v,dtype=float)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:43:27) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
v=(v,dtype=float)
n=size(v)
m=(v[0]*v[1]*v[2]*v[3]*v[n-1])**1/v
print(round(m,2))
-- EXECUTION TIME:
0.219128
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 3
    v=(v,dtype=float)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:46:01) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
m=sum(v)/size(v)
print(round(m,2))
-- EXECUTION TIME:
0.488648
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
4.9
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
3.85
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
3.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:46:08) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
m=sum(v)/size(v)
print(round(m,2))
-- EXECUTION TIME:
0.616386
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
4.9
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
4.9
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
3.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:46:08) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
m=sum(v)/size(v)
print(round(m,2))
-- EXECUTION TIME:
1.74321
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
4.9
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
3.85
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
3.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:46:08) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
m=sum(v)/size(v)
print(round(m,2))
-- EXECUTION TIME:
1.31001
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
4.9
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
3.85
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
3.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:46:08) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
m=sum(v)/size(v)
print(round(m,2))
-- EXECUTION TIME:
2.57852
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
4.9
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
3.85
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
3.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:46:09) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
m=sum(v)/size(v)
print(round(m,2))
-- EXECUTION TIME:
3.18007
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
4.9
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
3.1
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
3.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:47:06) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
m=(v[0]*v[1]*v[2]*v[3]*v[n-1])**1/v
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:48:06) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
m=(v[0]*v[1]*v[2]*v[3]*v[n-1])**(1/n)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:48:26) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
m=(v[0]*v[1]*v[2]*v[3]*v[n-1])**(1/n)
print(round(m,2))
-- EXECUTION TIME:
0.434588
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
2.61
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
2.48
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
2.72
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:48:55) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
m=(v[0]*v[1]*v[2]*v[3]*v[n-1])**1/n
print(round(m,2))
-- EXECUTION TIME:
0.414818
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
118.83
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
digite n numeros: 38.65
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
digite n numeros: 29.95
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:48:59) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
m=(v[0]*v[1]*v[2]*v[3]*v[n-1])**1/n
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:02:33) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*((v[i])
		i=i+1
M=(m*v[n-1])**1/n
print(round(M,2))
-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:02:51) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*((v[i])
	i=i+1
M=(m*v[n-1])**1/n
print(round(M,2))
-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:03:31) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	i=i+1
	m=m*((v[i])
M=(m*v[n-1])**1/n
print(round(M,2))
-- ERROR:
File "XXXX", line 9
    M=(m*v[n-1])**1/n
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:04:13) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*((v[i])
	i=i+1
M=(m*v[n-1])**1/n
print(round(M,2))
-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:04:34) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*((v[i])
	i=i+1
M=(m*v[n-1])**1/n
print(round(M,2))
-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:05:25) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*((v[i]))
	i=i+1
M=(m*v[n-1])**1/n
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:05:55) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
M=(m*v[n-1])**1/n
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:07:04) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
M=(m*v[n-1])**(1/n)
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:07:18) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
M=(m*v[n-1])**(1/n)
print(round(M,2))
-- EXECUTION TIME:
0.414127
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
5.96
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
4.51
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
3.77
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:08:06) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
M=(m*v[n-1])**(1/n)
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:08:21) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
M=(m*v[n-1])**(1/n)
print(round(M,2))
-- EXECUTION TIME:
0.402076
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
5.96
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
4.51
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
3.77
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:08:45) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
M=(m*v[n-1])**(1/n)
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:08:55) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
M=(m*v[n-1])**(1/n)
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:09:26) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
M=m**(1/n)
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:09:41) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
M=m**(1/n)
print(round(M,2))
-- EXECUTION TIME:
0.514498
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
4.44
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
3.29
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
2.72
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
